# event-log-to-declare-json

./: Cargo.toml  README.md  index.html
.github/workflows/: continuous_deployment.yml
event-logs/: event_log_1.xes
results/: 1.json  2.json  3.json  L01-Chickenhunt.json  L02-BPI19-filtered.json
src/: declare_translation.rs  main.rs  matrix_generation.rs  parser.rs
src/dependency_types/: dependency.rs  existential.rs  temporal.rs
