[package]
name = "declare_json_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
process_mining = "0.3.14"
chrono = { version = "0.4", features = ["wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Yew dependencies
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "ProgressEvent",
    "MouseEvent",
    "Event",
    "InputEvent",
]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

thiserror = "1.0"

# If getrandom is used directly or by another crate for wasm, it needs 'js' feature
getrandom = { version = "0.2", features = ["js"] }

gloo-console = "0.3.0"

# "v4" for UUID v4 generation
# "js" for wasm randomness
uuid = { version = "1.0", features = ["v4", "js"] }

instant = { version = "0.1", features = ["wasm-bindgen"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync"] }